Style fixes for alignment, header inside routes

--- a/src/app/components/nomination/submit-nomination/submit-nomination.component.scss
+++ b/src/app/components/nomination/submit-nomination/submit-nomination.component.scss
@@ -1,3 +1,7 @@
 #submitNominationContainer.submit-nomination-wrapper {
+    margin-top: 60px;
     
+    .criteria-checkbox {
+        padding: 10px 0 0 20px;
+    }
 }
